# agent-memory

./: .env.example  .gitignore  ADVANCED_MEMORY_2026.md  CLAUDE.md  COMPRESSION_AND_OPTIMIZATION.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  KNOWLEDGE_GRAPH.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.zh.md  benchmark_results.json  docker-compose.yml  integrate_memory.sh  integrate_to_openclaw.py  pyproject.toml  simple_sync.py  sync_memories.py  test_agent_memory_qdrant.py  test_memory_service.py  test_openai_embedding.py  test_qdrant_fixed.py  vector_memory.py
.cache/: embeddings.json  query_cache.json
agent_memory/: __init__.py  atomic_notes.py  batch_embedding.py  config.py  enhanced_memory_graph.py  human_feedback.py  hybrid_rag.py  integrate.py  knowledge_graph.py  memory_compressor.py  memory_evolver.py  memory_optimizer.py  memory_service.py  simple_sync.py  sync.py  test_improvements.py  test_openai_embedding.py  test_quickstart.py  tiered_memory.py
docs/: AGENT_MEMORY_QDRANT.md  FINAL_SOLUTION.md  HOW_I_USE_MEMORY.md  INTEGRATION_GUIDE.md  KNOWLEDGE_GRAPH_UPDATE.md  OPENAI_EMBEDDING_INTEGRATION.md  PUSH_TO_GITHUB.md  QUICKSTART.md  SUMMARY.md
experiments/: memory-stats.sh  weekly-summary.py
knowledge_graph/: graph.json
scripts/: benchmark_improvements.py  init_memory.py
vector-memory/: atomic_notes.py  batch_embedding.py  enhanced_memory_graph.py  hybrid_rag.py  knowledge_graph.py  memory_compressor.py  memory_evolver.py  memory_optimizer.py  memory_service.py  requirements.txt  test_improvements.py  test_qdrant.py  test_quickstart.py  (+1 more)
(+28 files in other folders)
